# Gyatt-O-Tune

./: .gitignore  Gyatt-O-Tune.spec  LICENSE  README.md  build_exe.ps1  build_mac.sh  installer.iss  pyproject.toml  test_filter_logic.py  test_row_memory.py
src/gyatt_o_tune/: __init__.py  main.py
src/gyatt_o_tune.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/gyatt_o_tune/core/: __init__.py  io.py
src/gyatt_o_tune/ui/: __init__.py  log_viewer_window.py  main_window.py  preferences_dialog.py
src/scattersyncms/: __init__.py  main.py
src/scattersyncms.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/scattersyncms/ui/: __init__.py  log_viewer_window.py  main_window.py
tuning_data/: 2026-03-20_20.10.28.msq  FN.mlg  Fab9_tune_initial.msq  Final.msq  Idle Recovery w advance.mlg  Idle Recovery.mlg  Idle Recovery2.mlg  Lase.mlg  Last.mlg  Pierce - DIY Test.msq  Pierce Starter.msq  Pierce Test-coldstart.mlg  Pierce Test.mlg  Pierce Test.msq  Pierce_Simple_Idle.msq  SP_NB2_Rev2.msq  SP_NB2_Rev3.msq  SP_Rev2.msq  pending.msq  tune1_3-15-26.msq
