[project]
name = "gyatt-o-tune"
version = "0.1.2"
description = "MegaSquirt tune and log analysis desktop app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7.0",
    "pyqtgraph>=0.13.7",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.14.0",
]

[project.scripts]
gyatt-o-tune = "gyatt_o_tune.main:main"
gyatt_o_tune = "gyatt_o_tune.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gyatt_o_tune = ["assets/*.svg", "assets/*.ico"]
